Made h1 tag Bold

--- a/Index.html
+++ b/Index.html
@@ -63,6 +63,7 @@
     </div>
   </body>
   <footer>
+    <h1>Danish Sheikh</h1>
     <h4>Contact me on abc@gmail.com for tie-ups.</h4>
   </footer>
 </html>
