--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,7 @@
         <li>Contact</li>
         <li>Portfolio</li>
         <li>Home</li>
+        <li>Find Us</li>
       </ul>
     </header>
   </head>
