--- a/Index.html
+++ b/Index.html
@@ -19,9 +19,9 @@
   </head>
 
   <body>
-    <img src="nature_view.jpg" alt="Nature View" />
+    <img src="nature_view.jpg" alt="Nature View"/>
     <h1>Some Wonderful Places</h1>
-    <h3>....Some places remind you of the things that are so beautiful that you want to just visintright here and now....</h3>
+    <h3>....Some places remind you of the things that are so beautiful that you want to just visit right here and now....</h3>
     <div id="main" class="content">
       <h3><strong>Why are trees so important?</strong></h3>
       <p>Trees are vital. As the biggest plants on the planet, they give us oxygen, store carbon, stabilise the soil and
@@ -52,7 +52,7 @@
       day around the world with a significant percentage being used in the paper industry.</h3>
     </div>
     <div>
-      <img src="banyan-tree.jpg" alt="giant tree" />
+      <img src="banyan-tree.jpg" alt="giant tree"/>
       <p id="paragraph">A tree typically has many secondary branches supported clear of the ground by the trunk. This trunk typically
         contains woody tissue for strength, and vascular tissue to carry materials from one part of the tree to another.
         For most trees it is surrounded by a layer of bark which serves as a protective barrier. Below the ground, the
