--- a/Index.html
+++ b/Index.html
@@ -47,8 +47,8 @@
       </div>
     </main>
     <div class="fact">
-      <h1>FACT Time !!!</h1>
-      <h3> According to data from the Global Forest Resource Assessment roughly 80,000 to 160,000 trees are cut down each
+      <h1 id=>FACT Time !!!</h1>
+      <h3 if=> According to data from the Global Forest Resource Assessment roughly 80,000 to 160,000 trees are cut down each
       day around the world with a significant percentage being used in the paper industry.</h3>
     </div>
     <div>
