--- a/Index.html
+++ b/Index.html
@@ -9,11 +9,11 @@
     </script>
     <header>
       <ul>
-        <li>Shop</li>
-        <li>About</li>
-        <li>Contact</li>
-        <li>Portfolio</li>
-        <li>Home</li>
+        <li><a href="">Shop</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Home</a></li>
       </ul>
     </header>
   </head>
