Made some changes

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/1970b4035a.js" crossorigin="anonymous"></script>
+    <script scr="scripts.js" type="text/javascript"></script>
     <link href="Style.css" rel="stylesheet">
 
     </script>
@@ -30,7 +31,7 @@
         the past, present and future. It’s critical that woodlands, rainforests and trees in urban settings, such as parks, are preserved and
         sustainably managed across the world.</p>
     </div>
-    <main>
+    <main class="horizontal">
       <div class="place">
         <h2>A Place</h2>
         <i class="fas fa-leaf" id="leaf"></i>
