--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,8 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/1970b4035a.js" crossorigin="anonymous"></script>
-    <script scr="scripts.js" type="text/javascript"></script>
-    <link href="Style.css" rel="stylesheet">
+    <script scr="js/scripts.js" type="text/javascript"></script>
+    <link href="css/Style.css" rel="stylesheet">
 
     </script>
     <header>
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <img src="nature_view.jpg" alt="Nature View"/>
+    <img  id="treeroad" class="treeroad" src="images/nature_view.jpg" alt="Nature View"/>
     <h1>Some Wonderful Places</h1>
     <h3>....Some places remind you of the things that are so beautiful that you want to just visit right here and now....</h3>
     <div id="main" class="content">
@@ -54,7 +54,7 @@
       day around the world with a significant percentage being used in the paper industry.</h3>
     </div>
     <div>
-      <img src="banyan-tree.jpg" alt="giant tree"/>
+      <img src="images/banyan-tree.jpg" alt="giant tree"/>
       <p id="paragraph">A tree typically has many secondary branches supported clear of the ground by the trunk. This trunk typically
         contains woody tissue for strength, and vascular tissue to carry materials from one part of the tree to another.
         For most trees it is surrounded by a layer of bark which serves as a protective barrier. Below the ground, the
@@ -64,6 +64,7 @@
         growth and development.</p>
     </div>
   </body>
+  
   <footer>
     <h1>Danish Sheikh</h1>
     <h4>Contact me on abc@gmail.com for tie-ups.</h4>
