--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="">Shop</a></li>
         <li><a href="">About</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="form.html">From</a></li>
         <li><a href="">Portfolio</a></li>
         <li><a href="">Home</a></li>
       </ul>
