Added more funcitonalities

--- a/form.html
+++ b/form.html
@@ -31,9 +31,19 @@
         <label for="quanity">How many Pizzas</label><br>
         <input type="number" name="quanity" step="1"/>
 
-         <br><br>
+        <br><br>
 
-        <input type="submit" value="send">
+        <label for="Extras">Extras</label><br>
+        <input type="text" name="Extras">
+
+        <br><br>
+
+        <label for="crispy">Crysp Level</label><br>
+        <input type="range" name="crispy" min="0" max="5" step="1"/>
+
+        <br><br>
+
+        <input type="submit" value="send"/>
     </form>
     
 </body>
