--- a/Index.html
+++ b/Index.html
@@ -12,9 +12,9 @@
     <header>
       <ul>
         <li><a href="">Shop</a></li>
-        <li><a href="">About</a></li>
+        <li><a href="todoList.html">About</a></li>
         <li><a href="form.html">From</a></li>
-        <li><a href="">Portfolio</a></li>
+        <li><a href="todo.html">Portfolio</a></li>
         <li><a href="">Home</a></li>
       </ul>
     </header>
