Added todo list along with the check and delete button

--- a/todoList.html
+++ b/todoList.html
@@ -11,12 +11,15 @@
 <body>
     <header> Danish's To-do List</header>
     <form>
-        <input type="text" class="todo-input" placeholder="Todoooooo !!!">
-        <button class="todo-button" type="submit">
-            <i class="fas fa-plus-square "></i>
-        </button>
+        <div>
+            <input type="text" class="todo-input" placeholder="Todoooooo !!!">
+            <button class="todo-button" type="submit">
+                <i class="fas fa-plus-square "></i>
+            </button>
+        </div>
+        
 
-        <div class="div-container">
+        <div class="todo-container">
             <ul class="todo-list"></ul>
         </div>
     </form>
