--- a/todoList.html
+++ b/todoList.html
@@ -20,7 +20,7 @@
         
 
         <div class="todo-container">
-            <ul class="todo-list"></ul>
+            <ul id="todo-list" class="todo-list"></ul>
         </div>
     </form>
     
